--- a/index.html
+++ b/index.html
@@ -1,82 +1,74 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Student Enrollment Form </title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+    <title>To - Do List</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+    <header>
+        <div class="main_heading">
+            <h1>My To-Do List</h1>
+        </div>
+    </header>
+
     <div class="bg-img"></div>
-    <div class="name">
-        <center>
-            <h1><u> Student Enrollment Form  </u></h1>
-        </center>
+
+    <div class="modal red" id="Modal">
+        <div class="content" id="content">
+            <span id="modal-text">
+        Some Text
+      </span>
+            <button onclick="closemodal()" class="modal-btn">x</button>
+        </div>
+    </div>
+    <span class="todayDate">Day <span id="d1"></span></span>
+
+    <form class="todoform">
+        <input type="text" placeholder="Add a new Task .." class="todo-input" required />
+        <div class="abc">
+            <button class="todo-button" type="submit">
+      <i class="fas fa-plus-square"></i>
+    </button>
+            <div class="select">
+                <select name="todos" class="filter-todo " style="color:black;">
+        <option value="completed" style="color:rgb(13, 110, 236);">Completed</option>
+        <option value="incomplete" style="color:rgb(179, 179, 179);">Incomplete</option>
+      </select>
+            </div>
+        </div>
+    </form>
+
+    <div class="todo-container">
+        <ul class="todo-list"></ul>
+    </div>
+    <button class="delete-all" onclick="show_alert()">Delete All Tasks</button>
+
+    <div class="confirmation_box hide " id="confirmation_box">
+        <div class="optbox_header">
+            <i class="fas fa-times" onclick="goback()"></i>
+        </div>
+        <div class="option_box">
+            <div class="proceed" onclick="deleteAll();">Yes</div>
+            <div class="donot_proceed" onclick="goback()">No</div>
+        </div>
     </div>
 
+    <footer class="footer">
+        </div2>
+        </p>
+    </footer>
 
-    <table>
-        <tr>
-            <td>
-                <form onsubmit="event.preventDefault();onformSubmit();" autocomplete="off">
-                    <div>
-                        <label>Name:</label><label class="validation-error hide" id="fullNameValidationError"> Again fill the form </label>
-                        <input type="text" name="fullName" id="fullName">
-                    </div>
-                    <div>
-                        <label>Mobile:</label>
-                        <input type="text" name="telefone" id="telefone" maxlength="16" onkeypress="mascara(this)">
-                    </div>
-                    <div>
-                        <label>Gender:</label>
-                        <select id="Sexo">
-                            <option value="Male">Male</option>
-                            <option value="Female">Female</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label>City:</label>
-                        <input type="text" name="Cidade" id="cidade">
-                    </div>
-                    <div>
-                        <label>E-mail:</label>
-                        <input type="email" name="email" id="email">
-                    </div>
-                    <div class="form-action-buttons">
-                        <input type="submit" value="Submit">
-                    </div>
-                    <div class="form-action-buttons">
-                        <input type="reset" value="Reset">
-                    </div>
-                </form>
-            </td>
-            <td>
+    <script src="app.js"></script>
 
-                <h2><u>Records :</u></h2>
-                <table class="list" id="employeeList">
-                    <thead>
-                        <tr>
-                        </tr>
-                        <tr>
-                            <th> Name</th>
-                            <th>Mobile</th>
-                            <th>Gender</th>
-                            <th>City</th>
-                            <th>E-mail</th>
-                            <th></th>
-
-                            </div>
-                        </tr>
-                    </thead>
-                    <tbody>
-                </table>
-            </td>
-        </tr>
-    </table>
-    <script src="script.js"></script>
 </body>
 
 </html>
